option java_outer_classname="SessionIdProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message SessionId
{
	optional string routerSessionId = 1;
	optional string clientSessionId = 2;
}